CourseCompass Wiedmier Course and Student Input HTML

--- a/src/main/resources/templates/courseList.html
+++ b/src/main/resources/templates/courseList.html
@@ -18,6 +18,7 @@
 		<td th:text="${currentCourse.creditHours}" /> 
 		<td th:text="${currentCourse.instructor}" /> 
 		<td th:text="${currentCourse.currentGrade}" /> 
+		<td th:text="${currentCourse.isCompleted}" />
 		<td>Edit</a></td> <!-- TODO Add functionality -->
 		<td>Delete</a></td> <!-- TODO Add functionality -->
 		</tr> 
