--- a/src/main/resources/templates/studentList.html
+++ b/src/main/resources/templates/studentList.html
@@ -11,10 +11,11 @@
 		<tr th:each="currentStudent : ${students}" > 
 		<td th:text="${currentStudent.id}" /> 
 		<td th:text="${currentStudent.name}" /> 
-		<td>Edit</a></td> <!-- TODO Add functionality -->
-		<td>Delete</a></td> <!-- TODO Add functionality -->
-		<td>View Courses</a></td> <!-- TODO Add functionality -->
-		</tr> 
+		
+		<td><a th:href="@{/edit/{id}(id=${currentStudent.id})}">Edit</a></td> 
+        <td><a th:href="@{/delete/{id}(id=${currentStudent.id})}" onclick="return confirm('Are you sure you want to delete this student?')">Delete</a></td> 
+        <td><a th:href="@{/viewCourses/{id}(id=${currentStudent.id})}">View Courses</a></td> 
+        </tr> 
 	</table> 
 </form> 
 <a href="../inputStudent">Add a new student</a> <!-- TODO Add functionality -->
