final edits pt 1

--- a/src/main/resources/templates/courseList.html
+++ b/src/main/resources/templates/courseList.html
@@ -29,7 +29,7 @@
 
 <p>Current GPA: <span th:text="${GPAView}" id="gpaOutput"></span></p>
 
-<a href="../inputCourse">Add a new course</a>  <!-- TODO Add functionality -->
+<a href="../inputCourse">Add a new course</a>
 
 </body>
 </html>
