--- a/src/main/resources/templates/courseList.html
+++ b/src/main/resources/templates/courseList.html
@@ -22,14 +22,15 @@
         <td th:text="${course.instructor}"></td>
         <td th:text="${course.currentGrade}"></td>
 		<td th:text="${course.creditHours}"></td>
-        <td><a th:href="@{'/editCourse/' + ${course.id}}">Edit</a></td>
-        <td><a th:href="@{'/deleteCourse/' + ${course.id}}" onclick="return confirm('Are you sure you want to delete this course?')">Delete</a></td>
+		<td><a th:href="@{'/deleteCourse/' + ${student.id} + '/' + ${course.id}}" onclick="return confirm('Are you sure you want to delete this course?')">Drop</a></td>
+    </tr>
+    <tr>
+		<td><a th:href="@{/inputCourse/{id}(id=${student.id})}">Add Course</a></td>
     </tr>
 </table>
 
 <p>Current GPA: <span th:text="${GPAView}" id="gpaOutput"></span></p>
 
-<a href="/inputCourse">Add a new course</a>
 
 </body>
 </html>
