--- a/src/main/resources/templates/inputCourse.html
+++ b/src/main/resources/templates/inputCourse.html
@@ -18,7 +18,7 @@
         form input[type="number"],
         form input[type="submit"] {
             display: block;
-            width: calc(100% - 20px); /* Adjusted width to accommodate padding */
+            width: calc(100% - 20px); 
             padding: 10px;
             margin-bottom: 10px;
             border: 1px solid #ccc;
@@ -27,8 +27,8 @@
         }
 
         form label {
-            display: block; /* Make labels block-level */
-            margin-bottom: 5px; /* Add margin between labels and inputs */
+            display: block;
+            margin-bottom: 5px;
         }
         
         form input[type="submit"] {
