--- a/src/main/resources/templates/courseList.html
+++ b/src/main/resources/templates/courseList.html
@@ -2,41 +2,8 @@
 <html>
   <head>
     <meta charset="ISO-8859-1">
+	<link rel="stylesheet" href="/style-sheet.css"/>
     <title>Course List</title>
-    <style>
-      body {
-          font-family: Arial, sans-serif;
-          background-color: #f2f2f2;
-      }
-      
-      h3 {
-          margin-bottom: 20px;
-      }
-      
-      table {
-          width: 100%;
-          border-collapse: collapse;
-      }
-      
-      th, td {
-          padding: 8px;
-          text-align: left;
-          border-bottom: 1px solid #ddd;
-      }
-      
-      th {
-          background-color: #f2f2f2;
-      }
-      
-      a {
-          color: #007bff;
-          text-decoration: none;
-      }
-      
-      a:hover {
-          text-decoration: underline;
-      }
-    </style>
   </head>
   <body>
     <h3>Courses For: <span th:text="${student.name}" id="name"></span></h3>
