--- a/src/main/resources/templates/inputCourse.html
+++ b/src/main/resources/templates/inputCourse.html
@@ -1,55 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"> 
+<html xmlns:th="http://www.thymeleaf.org">
 <head> 
     <meta charset="ISO-8859-1"> 
-    <title>Insert Course Information</title> 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-        }
-        
-        form {
-            max-width: 600px;
-            margin: 20px auto;
-        }
-        
-        form input[type="text"],
-        form input[type="number"],
-        form input[type="submit"] {
-            display: block;
-            width: calc(100% - 20px); 
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
-
-        form label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        
-        form input[type="submit"] {
-            background-color: #4CAF50;
-            color: white;
-            cursor: pointer;
-        }
-        
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-        
-        a:hover {
-            text-decoration: underline;
-        }
-
-        .container {
-            text-align: center;
-        }
-    </style>
+	<link rel="stylesheet" href="/style-sheet.css"/>
+    <title>Insert Course Information</title>
 </head> 
 <body> 
 
