--- a/src/main/resources/templates/inputStudent.html
+++ b/src/main/resources/templates/inputStudent.html
@@ -1,49 +1,8 @@
 <html xmlns:th="http://www.thymeleaf.org"> 
     <head> 
         <meta charset="ISO-8859-1"> 
+		<link rel="stylesheet" href="/style-sheet.css"/>
         <title>Insert Student Information</title> 
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-                background-color: #f2f2f2;
-            }
-            
-            form {
-                max-width: 600px;
-                margin: 20px auto;
-            }
-            
-            form input[type="text"],
-            form input[type="number"],
-            form input[type="submit"] {
-                display: block;
-                width: 100%;
-                padding: 10px;
-                margin-bottom: 10px;
-                border: 1px solid #ccc;
-                border-radius: 5px;
-                box-sizing: border-box;
-            }
-            
-            form input[type="submit"] {
-                background-color: #007bff;
-                color: white;
-                cursor: pointer;
-                transition: background-color 0.3s ease;
-            }
-            form input[type="submit"]:hover {
-                background-color: #0056b3;
-            }
-            
-            a {
-                color: #007bff;
-                text-decoration: none;
-            }
-            
-            a:hover {
-                text-decoration: underline;
-            }
-            </style>
     </head> 
 	<body> 
 
