--- a/src/main/resources/templates/studentList.html
+++ b/src/main/resources/templates/studentList.html
@@ -2,62 +2,8 @@
 <html>
 <head>
     <meta charset="ISO-8859-1">
+	<link rel="stylesheet" href="/style-sheet.css"/>
     <title>Student List</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-            padding: 20px;
-        }
-
-        h3 {
-            margin-bottom: 20px;
-            color: #007bff;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-
-        th, td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        .add-link {
-            display: inline-block;
-            background-color: #007bff;
-            color: #fff;
-            padding: 8px 16px;
-            border-radius: 4px;
-            text-decoration: none;
-        }
-
-        .add-link:hover {
-            background-color: #0056b3;
-        }
-
-        .gpa-output {
-            font-weight: bold;
-            color: #007bff;
-        }
-    </style>
 </head>
 <body>
 <h3>Student List:</h3>
